--- a/src/modules/header/header.component.html
+++ b/src/modules/header/header.component.html
@@ -1,17 +1,7 @@
 <div class='row' style='background-color: blue; min-height: 35px; padding-top: 10px;'>
-    <search-comp [isMobile]='isMobile' (filterChange)='searchFilter($event)' [ngStyle]="{'margin-left':isMobile?'45%':'80%'}"></search-comp>
+    <search-comp [isMobile]='isMobile' (filterChange)='searchFilter($event)'
+        [ngStyle]="{'margin-left':isMobile?'43%':'80%'}"></search-comp>
     <span (click)='navigate()' style="cursor: pointer;margin-left: 2%; ">
-        <!-- <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-            x="0px" y="0px" width="40px" height="36px" viewBox="0 0 40 36"
-            style="enable-background:new 0 0 40 36; margin-left: 95%; fill: white;" xml:space="preserve">
-            <g id="Page-1_4_" sketch:type="MSPage">
-                <g id="Desktop_4_" transform="translate(-84.000000, -410.000000)" sketch:type="MSArtboardGroup">
-                    <path id="Cart" sketch:type="MSShapeGroup" class="st0"
-                        d="M94.5,434.6h24.8l4.7-15.7H92.2l-1.3-8.9H84v4.8h3.1l3.7,27.8h0.1
-               c0,1.9,1.8,3.4,3.9,3.4c2.2,0,3.9-1.5,3.9-3.4h12.8c0,1.9,1.8,3.4,3.9,3.4c2.2,0,3.9-1.5,3.9-3.4h1.7v-3.9l-25.8-0.1L94.5,434.6" />
-                </g>
-            </g>
-        </svg> -->
         <i class="fa fa-shopping-cart" aria-hidden="true" style='color: white;float: right;'></i>
     </span>
     <span style='color:red; position: relative; bottom: 7px;'>{{totalItems}}</span>
