--- a/src/modules/sort/sort.component.html
+++ b/src/modules/sort/sort.component.html
@@ -1,4 +1,4 @@
-<div class="row justify-content-start" style='margin-left: 17%;' *ngIf='!isMobile'><span>Sort By</span>
+<div class="row justify-content-start" style='margin-left: 17%;' *ngIf='!isMobile'><span><p style="font-weight: bold;">Sort By</p></span>
     <div class="col-md-2" (click)="sort('LH')" style="cursor: pointer;">Price -- Low to High</div>
     <div class="col-md-2" (click)="sort('HL')" style="cursor: pointer;">Price -- High to Low</div>
     <div class="col-md-2" (click)="sort('D')" style="cursor: pointer;">Discount</div>
