minus button updated

--- a/src/modules/shoppingCart/cart.component.html
+++ b/src/modules/shoppingCart/cart.component.html
@@ -22,7 +22,7 @@
                     </div>
                 </div>
                 <div class='col-md-3' style='padding-top:30px'>
-                    <span><button (click)="changeCount('dec',item)"> ñ </button></span>
+                    <span><button (click)="changeCount('dec',item)"> - </button></span>
                     <span>
                         <input type="text" style='width: 40px; text-align: center;' [(ngModel)]='item.count'
                             (ngModelChange)='countChange($event,item)'></span>
