--- a/src/modules/filter/filter.component.html
+++ b/src/modules/filter/filter.component.html
@@ -1,15 +1,13 @@
-<!-- <div class="slidecontainer">
-    <div style="padding-bottom: 50px;">Filters</div>
-    <div><input type="range" min="0" max="1000" value="50" class="slider" id="myRange"></div>
-</div> -->
 
-<div style='padding:10px;' *ngIf='!isMobile'><p style="font-weight: bold;"> Filters</p>
-    <ng5-slider [(value)]="value" [options]="options"></ng5-slider>
-    <button class="btn btn-primary" style='margin-left: 40%; padding-top:10px'
-        (click)='applyFilter(value)'>Apply</button>
+<div class='simplepadding' *ngIf='!isMobile'>
+    <p class='font-bold'> Filters</p>
+    <ng5-slider [(value)]="value" [(highValue)]="highValue" [options]="options"></ng5-slider>
+    <p class='text-center'>Price</p>
+    <button class="btn btn-primary" class='margin-padding'
+        (click)='applyFilter(value, highValue)'>Apply</button>
 </div>
-<div *ngIf='isMobile' style='padding:5%;' (click)='showPopup()'>
-    <i class="fa fa-filter " aria-hidden="true" style='color: black; float: right;'>Filter</i>
+<div *ngIf='isMobile' class='padding-small' (click)='showPopup()' class='color-float'>
+    <i class="fa fa-filter " aria-hidden="true">Filter</i>
 </div>
 
 <!--Modal Popup-->
@@ -20,23 +18,20 @@
             <!-- Modal Header -->
             <div class="modal-header">
                 <h4 class="modal-title">Filter Options</h4>
-                <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
             </div>
 
             <!-- Modal body -->
             <div class="modal-body">
-                <ng5-slider [(value)]="value" [options]="options"></ng5-slider>
-                <!-- <button class="btn btn-primary" style='margin-left: 40%; padding-top:10px'
-                    (click)='applyFilter(value)'>Apply</button> -->
+                <ng5-slider [(value)]="value" [(highValue)]="highValue" [options]="options"></ng5-slider>
+                <p class='text-center'>Price</p>
             </div>
 
             <!-- Modal footer -->
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger" data-dismiss="modal" (click)='close()'>Cancel</button>
                 <button type="button" class="btn btn-primary" data-dismiss="modal"
-                    (click)='applyFilter(value)'>Apply</button>
+                    (click)='applyFilter(value, highValue)'>Apply</button>
             </div>
-
         </div>
     </div>
 </div>
