--- a/src/modules/shoppingCart/shopping-list.component.html
+++ b/src/modules/shoppingCart/shopping-list.component.html
@@ -1,31 +1,33 @@
 <ng-container *ngIf='shoppingItems'>
 	<div class="container body-content">
 		<div class="container">
-			<div class="row justify-content-start" style="padding-top:10px;">
-				<div *ngFor='let item of shoppingItems' class='col-md-3' [ngStyle]="{'width':isMobile?'50%':'100%'}"
+			<div class="row justify-content-start">
+				<div *ngFor='let item of shoppingItems' [ngClass]="{'col-3': !isMobile, 'col-6': isMobile}"
 					style="padding-top:10px;">
-					<div style='min-height: 100px;'>
+					<!-- class='col-3' [ngStyle]="{'width':isMobile?'50%':'100%'}" style="padding-top:10px;"> -->
+					<div class='min-height'>
 						<img width="100%" height="90%" src="{{item.img_url}}" />
 					</div>
 					<div>
 						{{item.name}}
 					</div>
-					<div class="row justify-content-start" style='padding-left: 6%;'>
-						<div style='width:25%'>
-							<span>{{item.price}}</span>
+					<div class="row justify-content-start padding-left">
+						<div class='width-list'>
+							<span> &#x20b9;{{item.price}}</span>
 						</div>
-						<div style='width: 25%; text-decoration: line-through;'>
-							<span>{{item.originalPrice}}</span>
+						<div class='width-list'>
+							<span>
+								<p class='line-through'>{{item.originalPrice}}</p>
+							</span>
 						</div>
 						<div>
-							<span style="color: green;">{{item.discount}}% off</span>
+							<span class='color-green'>{{item.discount}}% off</span>
 						</div>
 					</div>
 					<div class="row justify-content-start">
-						<div class='col-md-3' [ngStyle]="{'width':isMobile?'50%':'100%'}" style="padding-top:10px;">
-							<button class="btn btn-primary"
-								style="background-color: darkgoldenrod !important; border-color:black !important"
-								(click)='addItem(item)'>ADD TO CART</button>
+						<div [ngClass]="{'col-3': !isMobile, 'col-6': isMobile}" class='padding-top'>
+							<!-- [ngStyle]="{'width':isMobile?'50%':'100%'}" -->
+							<button class="btn btn-primary add-button" (click)='addItem(item)'>ADD TO CART</button>
 						</div>
 					</div>
 				</div>
