--- a/src/modules/shoppingCart/cart.component.html
+++ b/src/modules/shoppingCart/cart.component.html
@@ -157,8 +157,8 @@
         <!-- </div> -->
     </div>
     <div class='total-payable' *ngIf='isMobile'>
-        <div class='row padding-margin'>
-            <div class='col-10 font-bold'>Total
+        <div class='row'>
+            <div class='col-8 font-bold'>Total
                 Payable </div>
             <div class='col-2 font-bold'>
                 {{totalPrice}}
