--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -34,8 +34,16 @@ $min-height-large:160px;
 $mobile-width:90%;
 $margin-left-percentage:4%;
 $padding-percent:3%;
-$bottom:0px;
+$bottom-footer:0px;
 $half-height:100px;
 $padding-left:6%;
 $width-list:25%;
 $color-gold:darkgoldenrod;
+$border-radius: 5px;  
+$background: #d3d3d3;
+$opacity: 0.7;
+$transition: .2s;
+$transition-opacity: opacity .2s;
+$width-height:25px;
+$radius:50%;
+$bg-green:#4CAF50;
