--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,33 +2,33 @@
 @import './styles/variables';
 
 .slider {
-    -webkit-appearance: none;
-    width: 100%;
-    height: 15px;
+    -webkit-appearance: $none-border;
+    width: $full-width;
+    height: $padding-small;
     border-radius: 5px;  
-    background: #d3d3d3;
-    outline: none;
-    opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
+    background: $background;
+    outline: $none-border;
+    opacity: $opacity;
+    -webkit-transition: $transition;
+    transition: $transition-opacity;
   }
   
   .slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 25px;
-    height: 25px;
-    border-radius: 50%; 
-    background: #4CAF50;
-    cursor: pointer;
+    -webkit-appearance: $none-border;
+    appearance: $none-border;
+    width: $width-height;
+    height: $width-height;
+    border-radius: $radius; 
+    background: $bg-green;
+    cursor: $cursor;
   }
   
   .slider::-moz-range-thumb {
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    background: #4CAF50;
-    cursor: pointer;
+    width: $width-height;
+    height: $width-height;
+    border-radius: $radius;
+    background: $bg-green;
+    cursor: $cursor;
   }
   .simplepadding {
     padding: $small-padding;
@@ -154,7 +154,7 @@
 }
 .footer-item{
   padding-top: $padding-percent; 
-  bottom: $bottom; 
+  bottom: $bottom-footer; 
 }
 .min-height{
   min-height: $half-height;
@@ -169,4 +169,7 @@
   background-color: $color-gold !important; 
   border-color: $color-black !important
 }
-  
+.footer-style{
+  color: $text-white; 
+  background-color: $bg-color-blue;
+}
