external css added

--- a/src/modules/shoppingCart/cart.component.html
+++ b/src/modules/shoppingCart/cart.component.html
@@ -166,6 +166,6 @@
         </div>
     </div>
     <footer class='footer-item width-full'>
-        <p style="color: white; background-color: blue; text-align: center;">@copyright</p>
+        <p class='footer-style width-full text-center'>@copyright</p>
     </footer>
 </div>
