--- a/src/modules/shoppingcontainer/shopping-container.component.html
+++ b/src/modules/shoppingcontainer/shopping-container.component.html
@@ -25,7 +25,7 @@
         </div>
     </div>
     <footer class='footer-item width-full'>
-        <p style="color: white; background-color: blue; text-align: center;">@copyright</p>
-    </footer>
+            <p class='footer-style width-full text-center'>@copyright</p>
+        </footer>
     <!-- <cart *ngIf='showCartPage' [cartItems]='cartItems' (cartChange)='cartChange($event)'></cart> -->
 </div>
