search-filter combined

--- a/src/modules/search/search.component.html
+++ b/src/modules/search/search.component.html
@@ -1,5 +1,5 @@
 <span class='cursor-pointer'>
-    <input type="text" placeholder="Search" [(ngModel)]='searchText'
+    <input type="text" placeholder="Search" [(ngModel)]='cartFacade.searchText'
         class='search-box'>
 </span>
 <span (click)="search()" class='cursor-pointer color-white-float'>
