--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,11 +2,11 @@ $test-color:red;
 $small-padding:10px;
 $font-weight-bold: bold;
 $text-align-center: center;
-$margin-left-medium: 40%;
+$margin-left-medium: 15%;
 $padding-small-percentage:5%;
 $color-black: black; 
 $float-right: right;
-$blue-button-color:#007bff;
+$blue-button-color:#0759ef;
 $text-white:white;
 $bg-color-blue:blue;
 $min-height-header: 35px;
@@ -37,7 +37,7 @@ $padding-percent:3%;
 $bottom-footer:0px;
 $half-height:100px;
 $padding-left:6%;
-$width-list:25%;
+$width-list:27%;
 $color-gold:darkgoldenrod;
 $border-radius: 5px;  
 $background: #d3d3d3;
@@ -47,3 +47,10 @@ $transition-opacity: opacity .2s;
 $width-height:25px;
 $radius:50%;
 $bg-green:#4CAF50;
+$rounded-radius: 30%;
+$rounded-width: 120px;
+$rounded-height: 40px;
+$rounded-padding: 8px;
+$text-underline: underline;
+$right-value:3px;
+$color-yellow:yellow;
