--- a/src/modules/shoppingcontainer/shopping-container.component.html
+++ b/src/modules/shoppingcontainer/shopping-container.component.html
@@ -2,11 +2,11 @@
     <header-comp [cartItems]='cartFacade.cartItems' [isMobile]='isMobile' [totalItems]='cartFacade.totalItems'
         (filterChange)='searchFilter($event)' [isCartPage]='isCartPage'></header-comp>
     <div class='row' *ngIf='isMobile'>
-        <div style='width:35%'>
+        <div class='width-medium-range'>
             <sort class='padding-top' [shoppingItems]='shoppingItems' [isMobile]='isMobile'
                 (sortingChange)='sortingChange($event)'></sort>
         </div>
-        <div style='width:35%'>
+        <div class='width-medium-range'>
             <filter [shoppingItems]='shoppingItems' (filterChange)='filterChange($event)' [isMobile]='isMobile'>
             </filter>
         </div>
