new variable added

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -52,5 +52,6 @@ $rounded-width: 120px;
 $rounded-height: 40px;
 $rounded-padding: 8px;
 $text-underline: underline;
-$right-value:3px;
-$color-yellow:yellow;
+$right-value: 3px;
+$color-yellow: yellow;
+$width-range: 35%;
