--- a/src/modules/shoppingcontainer/shopping-container.component.html
+++ b/src/modules/shoppingcontainer/shopping-container.component.html
@@ -24,8 +24,9 @@
             </shopping-list>
         </div>
     </div>
-    <footer class='footer-item width-full'>
-            <p class='footer-style width-full text-center'>@copyright</p>
+    <div class='row'>
+        <footer class='footer-item width-full'>
+            <p class='footer-style text-center'>@copyright</p>
         </footer>
-    <!-- <cart *ngIf='showCartPage' [cartItems]='cartItems' (cartChange)='cartChange($event)'></cart> -->
+    </div>
 </div>
