cart value css changes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -94,7 +94,7 @@
     width: $padding-small;
     position: $position-relative;
     font-size: $small-padding;
-    padding-left: $border-radius;
+    text-align: $text-align-center;
   }
   .cursor-pointer{
     cursor: $cursor;
