button layout changes

--- a/src/modules/shoppingCart/shopping-list.component.html
+++ b/src/modules/shoppingCart/shopping-list.component.html
@@ -26,8 +26,7 @@
 					</div>
 					<div class="row justify-content-start">
 						<div [ngClass]="{'col-3': !isMobile, 'col-6': isMobile}">
-							<!-- [ngStyle]="{'width':isMobile?'50%':'100%'}" -->
-							<button class="btn btn-primary add-button rounded-corner" (click)='addItem(item)'>ADD TO CART</button>
+							<button class="btn btn-primary add-button rounded-corner font-bold" (click)='addItem(item)'>ADD TO CART</button>
 						</div>
 					</div>
 				</div>
