--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -47,11 +47,12 @@ $transition-opacity: opacity .2s;
 $width-height:25px;
 $radius:50%;
 $bg-green:#4CAF50;
-$rounded-radius: 30%;
-$rounded-width: 120px;
-$rounded-height: 40px;
+$rounded-radius: 30px;
+$rounded-width: 104px;
+$rounded-height: 37px;
 $rounded-padding: 8px;
 $text-underline: underline;
 $right-value: 3px;
 $color-yellow: yellow;
 $width-range: 35%;
+$font:12px;
