--- a/src/modules/filter/filter.component.html
+++ b/src/modules/filter/filter.component.html
@@ -3,7 +3,7 @@
     <p class='font-bold'> Filters</p>
     <ng5-slider [(value)]="cartFacade.value" [(highValue)]="cartFacade.highValue" [options]="options"></ng5-slider>
     <p class='text-center'>Price</p>
-    <button class="btn btn-primary" class='margin-padding rounded-corner cursor-pointer'
+    <button class="btn btn-primary" class='margin-padding rounded-corner cursor-pointer font-bold'
         (click)='applyFilter(cartFacade.value, cartFacade.highValue)'>Apply</button>
 </div>
 <div *ngIf='isMobile' class='padding-small' (click)='showPopup()' class='color-float'>
