--- a/src/modules/shoppingCart/cart.component.html
+++ b/src/modules/shoppingCart/cart.component.html
@@ -61,7 +61,7 @@
                         {{totalPrice+totalDiscount}}
                     </div>
                 </div>
-                <div class='row'>
+                <div class='row padding-top-medium'>
                     <div class='col-6'>
                         Discount
                     </div>
